fix: z-index of menu.

--- a/src/components/parts/MyBody/style.module.scss
+++ b/src/components/parts/MyBody/style.module.scss
@@ -5,6 +5,7 @@
 
 .nav {
   position: fixed;
+  @apply z-hamburgerMenu;
 }
 
 main {
